--- a/cluster/apps/tools/hajimari/helm-release.yaml
+++ b/cluster/apps/tools/hajimari/helm-release.yaml
@@ -58,6 +58,7 @@ spec:
           - networking
           - nginx
           - rook-ceph
+          - security
           - tools
       customApps:
         - group: LAN
