--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -30,6 +30,8 @@ stringData:
     MEDIA_CALIBRE_GUAC_PASSWORD: ENC[AES256_GCM,data:bhql9/TiM3E+j7g=,iv:F3uWHadcmlt7+khojFgk4JfOArOlQOvc5l0yD/x02Ak=,tag:DHqKGn2z+7c7aavxFZoSeQ==,type:str]
     MEDIA_MONICA_DB_ROOT_PASSWORD: ENC[AES256_GCM,data:gGkh6eNFzvMbxMY+KrZ/eg==,iv:v9bafVdVa3gi4fO+qR6u9ieaCItv9o2qYD3K1/9oaKk=,tag:ywrKY5NB0FK4AxwFuoD4Mg==,type:str]
     MEDIA_MONICA_DB_USER_PASSWORD: ENC[AES256_GCM,data:yaycdHHQgPMEJg==,iv:7bF66BDw9fuJ/GS/9lVYjfl6ryBQxBaMH+u2+hobIPc=,tag:7juRDx3rgjoMaPH/K6X2dg==,type:str]
+    #ENC[AES256_GCM,data:WOuEZ8QYBqLd,iv:gtw+z51W1+SD+KjrzEPECeRWOTZNq7cd0kosyPeBZKQ=,tag:k6fcbRmCg3h0CyRdzqzlBg==,type:comment]
+    SECURITY_2FAUTH_APP_KEY: ENC[AES256_GCM,data:Z3I5BVhfZqJKpK6NNRAh2npHsBLwZx7gElx0lhxiDqg=,iv:A6p4l3DJWO+7NEJK6GfDmeVCaD9awTNt8M4gl0mAe/U=,tag:u4ZnWnVLBmpJRdhscRRafw==,type:str]
     #ENC[AES256_GCM,data:VNpRjE/d,iv:UdLSQY40OT0D2wzb7ghMZXXQBuwB3CcnfhiXqEzvQJs=,tag:u2Iz3ZW67L7bo+L+xLNyWQ==,type:comment]
     TOOLS_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:TgCTm7konV6Vu6Y=,iv:nn0qmL5f+H0jPKMca1SMIzuFuLQWHYUE49ygZreHtEE=,tag:Z1AWoRY5CXVzDaDjyUvB/w==,type:str]
     TOOLS_STATPING_ADMIN_USERNAME: ENC[AES256_GCM,data:OHPaobun5AM=,iv:sF/CtyZX6SPKHFk96WBfiq0t4ihbEje8Qd6GxpxgYh0=,tag:9aKvdrNQodEI+C8RMzBACw==,type:str]
@@ -63,8 +65,8 @@ sops:
             eEFSeGV3NHVBV0JXSnozbHpUaEtIbVUK6kmKX20QI1xvPOluAwA52XRqYrLB/k88
             wl6PHYbwI2EKrqXzWUtPkILBUORr1i+2NaFOO6cvnI5lWSMvnc/YNw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-01-29T20:53:10Z"
-    mac: ENC[AES256_GCM,data:w158oeqQtL4vIzI4DQwWe3FhHUVvGCwVbzdeGbplw1SF5tCSufbznfBcD7wRanzeENJCv0KwnboYgk5BlSJWFsM4IefmxSgBYb8FEUXoDgKI9qR9bCodAsSZmK8GNn1itwduWDJ04IDcIXAbAtaueUcFtrmkdbI19+UOts6wz68=,iv:alf7VTyirTVdBY0qJbw2y1kuI2wXFuNp2vLiup+Jf90=,tag:Dimxq/KIjavh61pi3IZhZg==,type:str]
+    lastmodified: "2024-05-07T21:20:14Z"
+    mac: ENC[AES256_GCM,data:cSLpKUeEoeJMJ9OHFtdfO5HN+apSBT0hpWqZfraflCgSkeWj/SWEahP9QynrzF/e7Y3Fsu/egygXK+Wv487R9cCmZxuTWaXDcUgyYVTEarPzUK6eJmKRLA6UdHC1gKg+HRtTFAShP35dKWjXUzbgayQqChGb5+FZxMg2pliZss8=,iv:jABZ9K8kAUXXkwsO3XGz7uYKrG7ES/WdP5dkEjdTmb8=,tag:YiFIhFO/6egzT7ADbED2eg==,type:str]
     pgp: []
     encrypted_regex: ((?i)(Pass|pass|secret($|[^N])|key|token|^data$|^stringData))
-    version: 3.7.3
+    version: 3.8.1
