--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -50,6 +50,7 @@ stringData:
     TOOLS_PASSBOLT_MARIADB_USER_PASSWORD: ENC[AES256_GCM,data:820/TFGWBMoz9SyadlzLig==,iv:SLghCH+3ptqVQiq6FWxIJR+fsjjISgtVTgiOewcPiWs=,tag:h7FsJ4RrBktMO6GvkyEOgg==,type:str]
     TOOLS_PASSBOLT_CAKE_PASSWORD: ENC[AES256_GCM,data:3K2ZLswgyzsYA4iEShwIGvSt,iv:nl7xLYS+zw53PiuNPFkZdXDUrdQ7r8heYGi1mBczUrA=,tag:OhPw9IP3xy5JAm6gYKZ1xw==,type:str]
     TOOLS_PASSBOLT_EMAIL_PASSWORD: ENC[AES256_GCM,data:4UBtLsxAjp1yU0eKm0da,iv:Do4NIHp0wJim3uDVbjsZ1cLqNmSnmjhhGZ/cf7XovV4=,tag:OCgW8MkPizxh55LOlHn/1A==,type:str]
+    TOOLS_RUSTDESK_RELAY: ENC[AES256_GCM,data:LWBypvtCssUfObYYHoDV2w==,iv:n2Q+ZchiHxotVUYeofhc92LuY9RoF+aqr34zXcuDvR4=,tag:nbeLNp1wf59UoDjq6/JFqQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -65,8 +66,8 @@ sops:
             eEFSeGV3NHVBV0JXSnozbHpUaEtIbVUK6kmKX20QI1xvPOluAwA52XRqYrLB/k88
             wl6PHYbwI2EKrqXzWUtPkILBUORr1i+2NaFOO6cvnI5lWSMvnc/YNw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-05-07T21:20:14Z"
-    mac: ENC[AES256_GCM,data:cSLpKUeEoeJMJ9OHFtdfO5HN+apSBT0hpWqZfraflCgSkeWj/SWEahP9QynrzF/e7Y3Fsu/egygXK+Wv487R9cCmZxuTWaXDcUgyYVTEarPzUK6eJmKRLA6UdHC1gKg+HRtTFAShP35dKWjXUzbgayQqChGb5+FZxMg2pliZss8=,iv:jABZ9K8kAUXXkwsO3XGz7uYKrG7ES/WdP5dkEjdTmb8=,tag:YiFIhFO/6egzT7ADbED2eg==,type:str]
+    lastmodified: "2024-05-16T02:16:59Z"
+    mac: ENC[AES256_GCM,data:HfkcFNlWf+FT8KomDc7/zSvY9GtH5r/+t7xilRGXZoGHGnCDsVbfWD40Etipo7rJAMNwwrjCmU56wthcnflLDNJF2qN9AxbueUk/SGWc81K032ivM/ZxwsMOktKdr8mof9ajZSeWKLdEk0ecHwRZw/ahxe373s2BtV8iUGk0vDc=,iv:I5DBKBXruloVEMj8CfXoiu7TsFfqfPrjuiokd8mDMFE=,tag:1zUA7OIpbtxm49na0D7CCw==,type:str]
     pgp: []
     encrypted_regex: ((?i)(Pass|pass|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.8.1
