--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -28,6 +28,10 @@ stringData:
     #ENC[AES256_GCM,data:PARhaSiC,iv:0geHZePcZkjTmVXNJAbZyGonVKgIok1UlhwmlkYr4lc=,tag:mt32gKVFx3wrC+1smigYVw==,type:comment]
     MEDIA_PHOTOPRISM_ADMIN_PASSWORD: ENC[AES256_GCM,data:8TEpz3gbshGlfrJ2lDQ=,iv:lKdT/3agj/38SHzxzzsDVgLG3dRxMbCLf2ElARJM3tQ=,tag:i6udn6Rb8Oq4zDSRIh7A5Q==,type:str]
     MEDIA_CALIBRE_GUAC_PASSWORD: ENC[AES256_GCM,data:bhql9/TiM3E+j7g=,iv:F3uWHadcmlt7+khojFgk4JfOArOlQOvc5l0yD/x02Ak=,tag:DHqKGn2z+7c7aavxFZoSeQ==,type:str]
+    MEDIA_GHOST_DB_ROOT_PASSWORD: ENC[AES256_GCM,data:zzdyrxQOB4J9duYtXtgG,iv:GtPuB0OMsWqnOITFrlvQsB7M4kEqKfIQEekZ/GCTxSQ=,tag:2rLQGtlxSvDAGoX6Iyk1og==,type:str]
+    MEDIA_GHOST_DB_USER: ENC[AES256_GCM,data:hu/2WamknoZC/VrV,iv:BxWeNTGVPM+PH69371E/qtl4oC0HGb7hwmpK0JmxDgM=,tag:3hbvhS4FcGh/SjxgR9fgWw==,type:str]
+    MEDIA_GHOST_DB_PASSWORD: ENC[AES256_GCM,data:TUdjQy14f1A=,iv:0IjW63PhxhSBwetsD7zba50LBdZ2IzoHOzPbQByuNXk=,tag:w4gWMI+0JxsEsX+bMH80Vg==,type:str]
+    MEDIA_GHOST_DB_DB: ENC[AES256_GCM,data:5vkz40dC+Yo=,iv:xu1Rmdc5qSDhWCfwu7JrO3PZU6mZNyUggE7NhQE3z48=,tag:yxPDbO0hPeqUCTSjDBVITg==,type:str]
     MEDIA_MONICA_DB_ROOT_PASSWORD: ENC[AES256_GCM,data:gGkh6eNFzvMbxMY+KrZ/eg==,iv:v9bafVdVa3gi4fO+qR6u9ieaCItv9o2qYD3K1/9oaKk=,tag:ywrKY5NB0FK4AxwFuoD4Mg==,type:str]
     MEDIA_MONICA_DB_USER_PASSWORD: ENC[AES256_GCM,data:yaycdHHQgPMEJg==,iv:7bF66BDw9fuJ/GS/9lVYjfl6ryBQxBaMH+u2+hobIPc=,tag:7juRDx3rgjoMaPH/K6X2dg==,type:str]
     #ENC[AES256_GCM,data:WOuEZ8QYBqLd,iv:gtw+z51W1+SD+KjrzEPECeRWOTZNq7cd0kosyPeBZKQ=,tag:k6fcbRmCg3h0CyRdzqzlBg==,type:comment]
@@ -66,8 +70,8 @@ sops:
             eEFSeGV3NHVBV0JXSnozbHpUaEtIbVUK6kmKX20QI1xvPOluAwA52XRqYrLB/k88
             wl6PHYbwI2EKrqXzWUtPkILBUORr1i+2NaFOO6cvnI5lWSMvnc/YNw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-05-16T02:16:59Z"
-    mac: ENC[AES256_GCM,data:HfkcFNlWf+FT8KomDc7/zSvY9GtH5r/+t7xilRGXZoGHGnCDsVbfWD40Etipo7rJAMNwwrjCmU56wthcnflLDNJF2qN9AxbueUk/SGWc81K032ivM/ZxwsMOktKdr8mof9ajZSeWKLdEk0ecHwRZw/ahxe373s2BtV8iUGk0vDc=,iv:I5DBKBXruloVEMj8CfXoiu7TsFfqfPrjuiokd8mDMFE=,tag:1zUA7OIpbtxm49na0D7CCw==,type:str]
+    lastmodified: "2024-05-28T14:06:41Z"
+    mac: ENC[AES256_GCM,data:YbVpBLroWAnRSXgEY1DHtAkigQLzUuhGBwjoAsXk4f6hLKL0vxJaktsx742PfcyVQ0eqWSWWOmuZFeBKSqxR2Nev1peKjAuNhV3ggRsmy2w+ntzR2w5VG4oJapl8Ssj4uch/dg/NDtFfuHG8hMBkOxfGqX4y5oPYEqUAUMTPRpU=,iv:7nI2OqJ4WNoU21+K9TTWWfxWE1m8Hrq3b467fd4Btd0=,tag:Yfl1ZqZh4/gCYkyoiCV3Aw==,type:str]
     pgp: []
     encrypted_regex: ((?i)(Pass|pass|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.8.1
