--- a/cluster/apps/tools/littlelink/helm-release.yaml
+++ b/cluster/apps/tools/littlelink/helm-release.yaml
@@ -35,14 +35,14 @@ spec:
               AVATAR_ALT: Thomas Ibarra <hello@imake.software>
               NAME: Thomas Ibarra
               BIO: Chip-to-Ship, Super-heroic Software Engineer.
-              BUTTON_ORDER: GITHUB,LINKED_IN,SOUND_CLOUD,TUMBLR,YOUTUBE
-              # CUSTOM_BUTTON_TEXT: Documentation,Recommended Gear
-              # CUSTOM_BUTTON_URL: https://l.technotim.live/docs,https://l.technotim.live/gear
-              # CUSTOM_BUTTON_COLOR: '#000000,#000000'
-              # CUSTOM_BUTTON_TEXT_COLOR: '#ffffff,#ffffff'
-              # CUSTOM_BUTTON_ALT_TEXT: Tech documentation site for my videos and more,Recommended Gear
-              # CUSTOM_BUTTON_NAME: DOCUMENTATION,GEAR
-              # CUSTOM_BUTTON_ICON: fas file-alt,fas fa-cog
+              BUTTON_ORDER: JOURNAL,GITHUB,LINKED_IN,SOUND_CLOUD,TUMBLR,YOUTUBE
+              CUSTOM_BUTTON_TEXT: Journal
+              CUSTOM_BUTTON_URL: https://journal.iwrite.software
+              CUSTOM_BUTTON_COLOR: "#71CDF9"
+              CUSTOM_BUTTON_TEXT_COLOR: "#000000"
+              CUSTOM_BUTTON_ALT_TEXT: Personal blog
+              CUSTOM_BUTTON_NAME: JOURNAL
+              CUSTOM_BUTTON_ICON: fas fa-newspaper
               GITHUB: https://sprk.sh/github
               # TWITTER: https://sprk.sh/twitter
               # INSTAGRAM: https://www.instagram.com/techno.tim
