--- a/cluster/apps/home/kustomization.yaml
+++ b/cluster/apps/home/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - esphome
   - ispy-dvr
   - home-assistant
-  - wyoming-piper
-  - wyoming-whisper
+  # - wyoming-piper
+  # - wyoming-whisper
   - zigbee2mqtt
   - zwavejs2mqtt
