--- a/cluster/core/kustomization.yaml
+++ b/cluster/core/kustomization.yaml
@@ -2,10 +2,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # - auth
+  - auth
   - databases
   - namespaces
   - monitoring
   - networking
   - storage
-  # - validation
+  - validation
