paperless-ngx: deploy

--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -34,6 +34,9 @@ stringData:
     MEDIA_GHOST_DB_DB: ENC[AES256_GCM,data:5vkz40dC+Yo=,iv:xu1Rmdc5qSDhWCfwu7JrO3PZU6mZNyUggE7NhQE3z48=,tag:yxPDbO0hPeqUCTSjDBVITg==,type:str]
     MEDIA_MONICA_DB_ROOT_PASSWORD: ENC[AES256_GCM,data:gGkh6eNFzvMbxMY+KrZ/eg==,iv:v9bafVdVa3gi4fO+qR6u9ieaCItv9o2qYD3K1/9oaKk=,tag:ywrKY5NB0FK4AxwFuoD4Mg==,type:str]
     MEDIA_MONICA_DB_USER_PASSWORD: ENC[AES256_GCM,data:yaycdHHQgPMEJg==,iv:7bF66BDw9fuJ/GS/9lVYjfl6ryBQxBaMH+u2+hobIPc=,tag:7juRDx3rgjoMaPH/K6X2dg==,type:str]
+    MEDIA_PAPERLESS_DB_PASSWORD: ENC[AES256_GCM,data:Ad3mV+5/93a130JP,iv:wfE5WMjgGeFbCK09UG0Zmr0B5OdbaNA782UdrbPnJ9k=,tag:fsF4IufGnQDwsV+apzWN4w==,type:str]
+    MEDIA_PAPERLESS_SECRET_KEY: ENC[AES256_GCM,data:3wQ/Vzek3dF52wrDnCLiOA==,iv:N5NKno2c4p0Su0soTqkfr3TOz4yFQN00fllw0MUMAvY=,tag:i0wuWWsddPyITTuf6Vtl7A==,type:str]
+    MEDIA_PAPERLESS_SMB_USERS: ENC[AES256_GCM,data:NPaTppQrwXvWMNKcAjLhvP1lXain8LdTD665EdVfsjHBKVs=,iv:GoI2GHHfYYCpVccCENPVf8c/e6kdm5xIf+j6rkySzGs=,tag:1cIVYeyydYVDeGy3soxa1A==,type:str]
     #ENC[AES256_GCM,data:WOuEZ8QYBqLd,iv:gtw+z51W1+SD+KjrzEPECeRWOTZNq7cd0kosyPeBZKQ=,tag:k6fcbRmCg3h0CyRdzqzlBg==,type:comment]
     SECURITY_2FAUTH_APP_KEY: ENC[AES256_GCM,data:Z3I5BVhfZqJKpK6NNRAh2npHsBLwZx7gElx0lhxiDqg=,iv:A6p4l3DJWO+7NEJK6GfDmeVCaD9awTNt8M4gl0mAe/U=,tag:u4ZnWnVLBmpJRdhscRRafw==,type:str]
     #ENC[AES256_GCM,data:VNpRjE/d,iv:UdLSQY40OT0D2wzb7ghMZXXQBuwB3CcnfhiXqEzvQJs=,tag:u2Iz3ZW67L7bo+L+xLNyWQ==,type:comment]
@@ -70,8 +73,8 @@ sops:
             eEFSeGV3NHVBV0JXSnozbHpUaEtIbVUK6kmKX20QI1xvPOluAwA52XRqYrLB/k88
             wl6PHYbwI2EKrqXzWUtPkILBUORr1i+2NaFOO6cvnI5lWSMvnc/YNw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-05-28T14:06:41Z"
-    mac: ENC[AES256_GCM,data:YbVpBLroWAnRSXgEY1DHtAkigQLzUuhGBwjoAsXk4f6hLKL0vxJaktsx742PfcyVQ0eqWSWWOmuZFeBKSqxR2Nev1peKjAuNhV3ggRsmy2w+ntzR2w5VG4oJapl8Ssj4uch/dg/NDtFfuHG8hMBkOxfGqX4y5oPYEqUAUMTPRpU=,iv:7nI2OqJ4WNoU21+K9TTWWfxWE1m8Hrq3b467fd4Btd0=,tag:Yfl1ZqZh4/gCYkyoiCV3Aw==,type:str]
+    lastmodified: "2024-09-20T22:01:32Z"
+    mac: ENC[AES256_GCM,data:vWRLPB8zd6T1+UdM5eHMhoFGcDn9FT3q7JoNSDLQIcfutvjItuc+yabea/AII5j7f9hWSdTeptYUlfZJkiq+GAUE6NfE1y0phmENGiZjXGCwxv+QmdOXeySm9IcMKd1Axlny5IvP/A/u8ItsgDwGBTPmVCnP2UUwTzbtiRCYpyc=,iv:jf4S712D2iJt1ZtxQogWAAQxarm4b5Fe8MGlWtI/Kzo=,tag:TBoUbToR02FzhvOHeAKDxg==,type:str]
     pgp: []
     encrypted_regex: ((?i)(Pass|pass|secret($|[^N])|key|token|^data$|^stringData))
-    version: 3.8.1
+    version: 3.9.0
