photoprism: enable imports

--- a/cluster/apps/media/photoprism/helm-release.yaml
+++ b/cluster/apps/media/photoprism/helm-release.yaml
@@ -86,3 +86,9 @@ spec:
         accessMode: ReadWriteOnce
         size: 1536Gi
         retain: true
+
+      imports:
+        enabled: true
+        globalMounts:
+          - path: /photoprism/import
+        existingClaim: local-photoprism-imports
