disable unused apps

--- a/cluster/apps/home/kustomization.yaml
+++ b/cluster/apps/home/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
   - emqx
   - esphome
-  - ispy-dvr
+  # - ispy-dvr
   - home-assistant
   - zigbee2mqtt
   - zwavejs2mqtt
