--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -37,6 +37,8 @@ stringData:
     MEDIA_PAPERLESS_DB_PASSWORD: ENC[AES256_GCM,data:Ad3mV+5/93a130JP,iv:wfE5WMjgGeFbCK09UG0Zmr0B5OdbaNA782UdrbPnJ9k=,tag:fsF4IufGnQDwsV+apzWN4w==,type:str]
     MEDIA_PAPERLESS_SECRET_KEY: ENC[AES256_GCM,data:3wQ/Vzek3dF52wrDnCLiOA==,iv:N5NKno2c4p0Su0soTqkfr3TOz4yFQN00fllw0MUMAvY=,tag:i0wuWWsddPyITTuf6Vtl7A==,type:str]
     MEDIA_PAPERLESS_SMB_USERS: ENC[AES256_GCM,data:NPaTppQrwXvWMNKcAjLhvP1lXain8LdTD665EdVfsjHBKVs=,iv:GoI2GHHfYYCpVccCENPVf8c/e6kdm5xIf+j6rkySzGs=,tag:1cIVYeyydYVDeGy3soxa1A==,type:str]
+    #ENC[AES256_GCM,data:aXI3rxksVyW1SkE=,iv:Q36y4FLitPSVoG3kzDJf71/EWmQlaX9oP1hQwMjuvuk=,tag:W7mxK8pZKHkzmUpwCuuIXg==,type:comment]
+    MONITORING_SCRUTINY_INFLUXDB_TOKEN: ENC[AES256_GCM,data:aVCm+QRAebfo48H3kU5k+nu7lwjaX/HNOvw2Dd1+bdMPGAJKcvb0Wrj5VjV+XoVzIT00pqYxdrWPl9wvdh7UCrUDu20PptbEqfBf8F59aluL60Slw9SgMQ==,iv:1QRl/JSmbPhhPndBp2IDXTo3ccxCG8am31GU7ed98yo=,tag:I6f5bm5KA8FhV/SSZ2uYHg==,type:str]
     #ENC[AES256_GCM,data:WOuEZ8QYBqLd,iv:gtw+z51W1+SD+KjrzEPECeRWOTZNq7cd0kosyPeBZKQ=,tag:k6fcbRmCg3h0CyRdzqzlBg==,type:comment]
     SECURITY_2FAUTH_APP_KEY: ENC[AES256_GCM,data:Z3I5BVhfZqJKpK6NNRAh2npHsBLwZx7gElx0lhxiDqg=,iv:A6p4l3DJWO+7NEJK6GfDmeVCaD9awTNt8M4gl0mAe/U=,tag:u4ZnWnVLBmpJRdhscRRafw==,type:str]
     #ENC[AES256_GCM,data:VNpRjE/d,iv:UdLSQY40OT0D2wzb7ghMZXXQBuwB3CcnfhiXqEzvQJs=,tag:u2Iz3ZW67L7bo+L+xLNyWQ==,type:comment]
@@ -73,8 +75,8 @@ sops:
             eEFSeGV3NHVBV0JXSnozbHpUaEtIbVUK6kmKX20QI1xvPOluAwA52XRqYrLB/k88
             wl6PHYbwI2EKrqXzWUtPkILBUORr1i+2NaFOO6cvnI5lWSMvnc/YNw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-09-20T22:01:32Z"
-    mac: ENC[AES256_GCM,data:vWRLPB8zd6T1+UdM5eHMhoFGcDn9FT3q7JoNSDLQIcfutvjItuc+yabea/AII5j7f9hWSdTeptYUlfZJkiq+GAUE6NfE1y0phmENGiZjXGCwxv+QmdOXeySm9IcMKd1Axlny5IvP/A/u8ItsgDwGBTPmVCnP2UUwTzbtiRCYpyc=,iv:jf4S712D2iJt1ZtxQogWAAQxarm4b5Fe8MGlWtI/Kzo=,tag:TBoUbToR02FzhvOHeAKDxg==,type:str]
+    lastmodified: "2024-11-08T20:45:15Z"
+    mac: ENC[AES256_GCM,data:ZuoN8TyKWeL5eJ2vDTFy6kgS951NMLgmNVMt9s3jH5Yewclki7LoqnX8TaquL8m6vqDud/r5Kcx1UhuvS+zNiBulaYNKUSILaL2Bxm9pwJLJl3Elqk82hCK5fRlTdv7+v5D/Y232i3+nY6g6tBGP0Xs6IEzIdPEnqTyM4R9ljtY=,iv:Pa7nzzIGiRzIgRfi8si7y0/aXhvy0l4T9PL4Szs9gqU=,tag:Qg3G2eK6oR9tJlBuE8s1nA==,type:str]
     pgp: []
     encrypted_regex: ((?i)(Pass|pass|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.0
