photoprism: disable imports folder

--- a/cluster/apps/media/photoprism/helm-release.yaml
+++ b/cluster/apps/media/photoprism/helm-release.yaml
@@ -87,8 +87,8 @@ spec:
         size: 1536Gi
         retain: true
 
-      imports:
-        enabled: true
-        globalMounts:
-          - path: /photoprism/import
-        existingClaim: local-photoprism-imports
+      # imports:
+      #   enabled: false
+      #   globalMounts:
+      #     - path: /photoprism/import
+      #   existingClaim: local-photoprism-imports
