scrutiny: use domain

--- a/cluster/core/monitoring/scrutiny/helm-release.yaml
+++ b/cluster/core/monitoring/scrutiny/helm-release.yaml
@@ -38,7 +38,7 @@ spec:
               tag: v0.8.1-collector
             env:
               TZ: America/Chicago
-              COLLECTOR_API_ENDPOINT: http://scrutiny.monitoring.svc.cluster.local:8080
+              COLLECTOR_API_ENDPOINT: http://scrutiny.sparks.codes:8080
               COLLECTOR_HOST_ID:
                 valueFrom:
                   fieldRef:
