filebrowser: enable proxy for external-name

--- a/cluster/apps/media/filebrowser/external-name.yaml
+++ b/cluster/apps/media/filebrowser/external-name.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: media
   annotations:
     external-dns.alpha.kubernetes.io/hostname: data.sparks.codes
-    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
+    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
 spec:
   type: ExternalName
   externalName: sparks.codes
