--- a/cluster/apps/games/minecraft/cwh11-perfect-world/helm-release.yaml
+++ b/cluster/apps/games/minecraft/cwh11-perfect-world/helm-release.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: minecraft-cwh11-broville
+  name: minecraft-cwh11-perfect-world
   namespace: games
 spec:
   interval: 15m
@@ -19,32 +19,34 @@ spec:
   values:
     image:
       repository: itzg/minecraft-server
-      tag: java8
-    imageTag:
+      tag: latest
     nodeSelector:
       services/minecraft: active
     resources:
       requests:
-        memory: 16384Mi
+        memory: 8192Mi
         cpu: 2000m
     minecraftServer:
       eula: "TRUE"
-      version: "1.10.2"
+      version: "1.20.1"
       type: FORGE
-      motd: "[broville] - cwh11.mc.sparks.codes"
+      motd: "cwh11-perfect-world.mc.sparks.codes"
       difficulty: normal
       ops: "superdigdug"
-      worldSaveName: world_cwh11_broville
+      worldSaveName: world
       maxPlayers: 20
       viewDistance: 14
+      # levelSeed:
       gameMode: survival
       pvp: true
-      onlineMode: "TRUE"
-      memory: 16384M
+      onlineMode: false
+      memory: 8192M
       serviceType: LoadBalancer
-      loadBalancerIP: 10.10.202.3
-      servicePort: 25566
+      loadBalancerIP: 10.10.202.10
+      rcon:
+        enabled: true
+        password: ${GAMES_MINECRAFT_BUNGEECORD_RCON_PASSWORD}
     persistence:
       dataDir:
         enabled: true
-        existingClaim: local-mc-cwh11-broville
+        existingClaim: local-mc-cwh11-perfect-world
