--- a/cluster/apps/games/minecraft/kustomization.yaml
+++ b/cluster/apps/games/minecraft/kustomization.yaml
@@ -2,11 +2,12 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - bungeecord
-  - cwh11
-  - cwh11-archive
-  - superdigdug
-  - superdigdug-overworld
-  - superdigdug-sparks
-  - superdigdug-rectify
-  - superdigdug-newlands
-  - superdigdug-wilderness
+  - cwh11-perfect-world
+  # - cwh11
+  # - cwh11-archive
+  # - superdigdug
+  # - superdigdug-overworld
+  # - superdigdug-sparks
+  # - superdigdug-rectify
+  # - superdigdug-newlands
+  # - superdigdug-wilderness
