--- a/cluster/apps/tools/idrac6/idrac-omega.sparks.codes/helm-release.yaml
+++ b/cluster/apps/tools/idrac6/idrac-omega.sparks.codes/helm-release.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: idrac-foxtrot-console
+  name: idrac-omega-console
   namespace: tools
 spec:
   interval: 15m
@@ -25,7 +25,7 @@ spec:
               tag: 1.0.2
             env:
               TZ: "America/Chicago"
-              IDRAC_HOST: "idrac-foxtrot.sparks.codes"
+              IDRAC_HOST: "idrac-omega.sparks.codes"
             envFrom:
               - secretRef:
                   name: idrac-secret
@@ -42,11 +42,11 @@ spec:
         annotations:
           authentik.sparks.codes/enabled: "true"
           hajimari.io/enable: "true"
-          hajimari.io/appName: "Foxtrot IDRAC Console"
+          hajimari.io/appName: "omega IDRAC Console"
           hajimari.io/icon: "console-network"
           hajimari.io/targetBlank: "true"
         hosts:
-          - host: idrac-foxtrot-console.sparks.codes
+          - host: idrac-omega-console.sparks.codes
             paths:
               - path: "/"
                 pathType: "Prefix"
@@ -55,5 +55,5 @@ spec:
                   port: http
         tls:
           - hosts:
-              - idrac-foxtrot-console.sparks.codes
+              - idrac-omega-console.sparks.codes
             secretName: acme-crt-secret-sparks-codes
