--- a/cluster/apps/tools/idrac6/kustomization.yaml
+++ b/cluster/apps/tools/idrac6/kustomization.yaml
@@ -3,5 +3,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - secret.sops.yaml
-  - idrac-foxtrot.sparks.codes
-  - idrac-whiskey.sparks.codes
+  - idrac-lambda.sparks.codes
+  - idrac-omega.sparks.codes
