wyoming-whisper,wyoming-piper: add to cluster

--- a/cluster/apps/home/kustomization.yaml
+++ b/cluster/apps/home/kustomization.yaml
@@ -3,7 +3,9 @@ kind: Kustomization
 resources:
   - emqx
   - esphome
-  # - ispy-dvr
   - home-assistant
+  # - ispy-dvr
+  - wyoming-piper
+  - wyoming-whisper
   - zigbee2mqtt
   - zwavejs2mqtt
