--- a/ansible.cfg
+++ b/ansible.cfg
@@ -7,6 +7,7 @@ module_name                 = command
 deprecation_warnings        = True
 executable                  = /bin/bash
 stdout_callback             = yaml
+ansible_python_interpreter  = auto_silent
 
 #--- Files/Directory settings
 log_path                = ~/ansible.log
